@@ -11,7 +11,7 @@
              '# used for work with REST API.'                   + '\n'  +
              '# If you wont to see at work set rest: true'      + '\n'  +
              '# and api_url in config.json'                     + '\n'  +
-             '# http://github.com/coderaiser/cloudcmd'          + '\n');
+             '# http://coderaiser.github.com/cloudcmd'          + '\n');
     
     var main        = global.cloudcmd.main,
         Util        = main.util,
