@@ -8,6 +8,9 @@
 * Added functions DOM.getCurrentFileContent(pCallBack [, pCurrentFile])
 and Util.setTimeout(pFunction [, pCallBack, pTime])
 
+* Added functions in win.js for parsing diskpart output.
+
+
 2012.12.12, Version 0.1.8
 
 * Added ability to shutdown Cloud Commander
